# gtk-splitter

./: .gitignore  AUTHORS  ChangeLog  HOSTS  Makefile  Makefile.am  NEWS  README  README.md  TODO  batchfile.c  batchfile.h  build_deb.sh.in  build_rpm.sh  build_rpm.sh.in  build_tgz.sh.in  callbacks.c  callbacks.h  clean.sh  combine.c  combine.h  configure.in  dostextfile.c  dostextfile.h  error.c  error.h  file_selection.c  globals.h  gtk-splitter.c  gtk-splitter.desktop  gtk-splitter.prj  gtk-splitter.spec.in  gtk-splitter.xpm  gtk_splitter.prj  gtk_splitter.pws  progress.c  progress.h  slack-desc  split.c  split.h  (+1 more)
src/: .gitignore  Makefile.am  batch.c  batch.h  callbacks.c  callbacks.h  combine.c  combine.h  dostextfile.c  dostextfile.h  error.c  error.h  file_selection.c  file_selection.h  globals.h  gtk-splitter.c  interface.c  interface.h  md5.c  md5.h  progress.c  progress.h  session.h  shell.c  shell.h  split.c  split.h  verify_dialog.c  verify_dialog.h  window.h
