SUBDIRS = src
EXTRA_DIST = gtk-splitter.spec    \
             gtk-splitter.desktop \
             gtk-splitter.png     \
             HOSTS                

gnome_menudir=$(prefix)/share/gnome/apps/Utilities
gnome_menu_DATA=gtk-splitter.desktop

icondir=$(prefix)/share/pixmaps
icon_DATA = gtk-splitter.png
