SUBDIRS = src
EXTRA_DIST = gtk-splitter.desktop	\
             gtk-splitter.png		\
             depcomp			

gnome_menudir = $(prefix)/share/applications
gnome_menu_DATA = gtk-splitter.desktop

icondir = $(prefix)/share/pixmaps
icon_DATA = gtk-splitter.png

docdir = $(prefix)/doc/@PACKAGE@-@VERSION@
doc_DATA = ChangeLog AUTHORS COPYING INSTALL
