dnl -- Initialize Autoconf. --
AC_INIT(src/gtk-splitter.c)

dnl -- Package information. --
PACKAGE=gtk-splitter
VERSION=1.2

dnl -- Initialize Automake. --
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

dnl -- Check for a C compiler. --
AC_PROG_CC

dnl -- Check for a C Pre-processor. --
AC_PROG_CPP

dnl -- Check for a BSD compatible installer. --
AC_PROG_INSTALL

dnl -- Check for GTK+2.0 and pkg-config. --
PKG_CHECK_MODULES(GTK,"gtk+-2.0") 
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

dnl -- Create the Makefiles. --
AC_OUTPUT([ Makefile
            gtk-splitter.spec
            src/Makefile
          ])


dnl -- Dislpay some information. --
AC_MSG_RESULT(--------------------------------------------------------)
AC_MSG_RESULT()
AC_MSG_RESULT(If this configure script fails to look for something)
AC_MSG_RESULT(send me an email:  techgunter@yahoo.com)
AC_MSG_RESULT()
AC_MSG_RESULT(Type 'make' and then (as root) 'make install'.)
AC_MSG_RESULT()
AC_MSG_RESULT(--------------------------------------------------------)
AC_MSG_RESULT()
