AM_CFLAGS = -Wall -DGTK_DISABLE_DEPRECATED -DG_DISABLE_DEPRECATED @CFLAGS@ @GTK_CFLAGS@
gtk_splitter_LDADD = @GTK_LIBS@

bin_PROGRAMS = gtk-splitter

gtk_splitter_SOURCES =		\
  gtk-splitter.c		\
  callbacks.c			\
  callbacks.h			\
  combine.c			\
  combine.h			\
  dostextfile.c			\
  dostextfile.h			\
  file_selection.c		\
  file_selection.h		\
  progress.c			\
  progress.h			\
  split.c			\
  split.h			\
  globals.h			\
  interface.c			\
  interface.h
