AM_CFLAGS = -Wall -DGTK_DISABLE_DEPRECATED -DG_DISABLE_DEPRECATED @CFLAGS@ @GTK_CFLAGS@
gtk_splitter_LDADD = @GTK_LIBS@

bin_PROGRAMS = gtk-splitter

gtk_splitter_SOURCES =  \
batch.c                 \
batch.h                 \
callbacks.c             \
callbacks.h             \
combine.c               \
combine.h               \
file_selection.c        \
file_selection.h        \
gtk-splitter.c          \
interface.c             \
interface.h             \
progress.c              \
progress.h              \
session.h               \
shell.c                 \
split.c                 \
split.h                 \
window.h
